@@ -1,15 +1,19 @@
 package com.bfc.controller;
 
+import com.bfc.dto.WordDto;
 import com.bfc.entity.User;
+import com.bfc.entity.HardWord;
 import com.bfc.entity.Word;
 import com.bfc.service.HardWordServiceImpl;
 import com.bfc.service.UserServiceImpl;
 import com.bfc.service.WordServiceImpl;
 import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.transaction.annotation.Transactional;
 import org.springframework.web.bind.annotation.*;
 
 import java.util.List;
 import java.util.Optional;
+import java.util.stream.Collectors;
 
 @RestController
 @RequestMapping("/api/hard-words")
@@ -24,32 +28,19 @@ public class HardWordController {
     @Autowired
     private WordServiceImpl wordService;
 
-    // 用于前端的简化 DTO，只返回单词本身信息
-    public static class WordDTO {
-        public Integer id;
-        public String word;
-        public String meaning;
-
-        public WordDTO(Integer id, String word, String meaning) {
-            this.id = id;
-            this.word = word;
-            this.meaning = meaning;
-        }
-    }
-
     /**
      * 查询某用户所有顽固单词（可选按语言过滤）
      * /api/hard-words/{username}?lang=EN 或 KO
      */
     @GetMapping("/{username}")
-    public List<WordDTO> getUserHardWords(@PathVariable String username,
+    public List<WordDto> getUserHardWords(@PathVariable String username,
                                           @RequestParam(required = false) String lang) {
         User user = userService.findByUsername(username);
         if (user == null) {
             return List.of();
         }
 
-        return hardWordService.findByUser(user)
+        List<HardWord> hardWords = hardWordService.findByUser(user)
                 .stream()
                 .filter(hw -> {
                     if (lang == null || lang.isEmpty()) {
@@ -58,12 +49,25 @@ public class HardWordController {
                     Word w = hw.getWord();
                     return w != null && lang.equalsIgnoreCase(w.getLang());
                 })
-                .map(hw -> new WordDTO(
-                        hw.getWord().getId(),
-                        hw.getWord().getWord(),
-                        hw.getWord().getMeaning()
-                ))
-                .toList();
+                .collect(Collectors.toList());
+
+        return wordService.buildWordDtosWithStars(hardWords);
+    }
+
+    /**
+     * 按天 + 语言查询顽固单词
+     */
+    @GetMapping("/{username}/day/{day}")
+    public List<WordDto> getUserHardWordsByDay(@PathVariable String username,
+                                               @PathVariable Integer day,
+                                               @RequestParam String lang) {
+        User user = userService.findByUsername(username);
+        if (user == null || day == null) {
+            return List.of();
+        }
+
+        List<HardWord> words = hardWordService.findHardWordsByUserLangDay(user, lang, day);
+        return wordService.buildWordDtosWithStars(words);
     }
 
     /**
@@ -92,5 +96,16 @@ public class HardWordController {
         }
         hardWordService.removeHardWord(user, wordOpt.get());
         return "移除成功";
+    }
+
+    @PostMapping("/star")
+    @Transactional
+    public String updateStar(@RequestParam String username, @RequestParam Integer wordId, @RequestParam Integer star) {
+        User user = userService.findByUsername(username);
+        if (user == null || wordId == null || star == null) {
+            return "用户或单词不存在";
+        }
+        hardWordService.updateStar(user.getId(), wordId, star != 0);
+        return "OK";
     }
 }
